Fix various issues in editor component (#270)
- display first verse number in paragraph inside of para-contents
- fix verse number background getting cut off at beginning of line
- fix incorrect box-shadow when switching from checking component to
editor component
- fix right arrow navigation at end of a segment
- fix SF-516

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/text/text.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/text/text.component.scss
@@ -17,6 +17,7 @@ quill-editor {
 
 .highlight-segment-target {
   color: black;
+  box-shadow: unset;
 }
 
 .highlight-para-target > usx-para-contents {
@@ -47,7 +48,7 @@ quill-editor {
         color: rgba(0, 0, 0, 0.8);
         background-color: white;
 
-        usx-verse {
+        usx-verse > span > span {
           padding-top: 0.35rem;
           background-color: #f5f3ef;
           border-radius: 8px;
